# gemini_tts_gui

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_HANDOVER_PROMPT.md  PROJECT_HANDOVER_PROMPT_v2.md  README.md  ROADMAP.md  TECHNICAL_NOTES.md  USER_MANUAL.md  WORKFLOW.md  check_path.py  markdowns.md  prototype_tool.md  pyproject.toml  requirements.txt  run.py  vd.py
resources/: voices.json
scripts/: release.py
src/gemini_tts_app/: __init__.py  __main__.py  constants.py  database.py  editorial_assistant_tab.py  find_replace_dialog.py  google_api_handler.py  init_pydub.py  library_tab.py  logger_setup.py  long_form_composer_tab.py  main_app.py  settings_manager.py  settings_tab.py  subtitle_details_window.py  thumbnail_preview.py  tts_logic.py  tts_tab.py  utilities_tab.py  utils.py
tests/: test_settings_manager.py  test_tts_logic.py
