[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini_tts_gui"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A GUI application for Google Gemini Text-to-Speech."
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
dependencies = [
    "google-generativeai",
    "appdirs",
    # "Pillow", # Bỏ comment nếu bạn dùng Pillow
]

[project.scripts]
# Nếu bạn muốn tạo một command-line script khi cài đặt package
# gemini-tts-cli = "gemini_tts_app.__main__:main_cli" # Ví dụ một CLI entry point (nếu có)

[project.gui-scripts]
gemini-tts-gui = "gemini_tts_app.__main__:main" # Entry point cho GUI